[package]
name = "glutin_examples"
version = "0.1.2"
authors = ["The glutin contributors", "Hal Gentz <zegentzy@protonmail.com>"]
description = "Examples for glutin"
repository = "https://github.com/rust-windowing/glutin"
license = "Apache-2.0"
readme = "../README.md"
build = "build.rs"
edition = "2018"
publish = false

[dependencies]
glutin = { path = "../glutin" }
raw-window-handle = "0.4.2"
takeable-option = "0.4"
image = "0.21"
glm = "0.2.3"
bitflags = "1.3"

[build-dependencies]
gl_generator = "0.14"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]